# PointCloud_Crop

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  generate_vscode_config.py
header/: fileimporter.h  mainwindow.h  pointcloudviewer.h  rectangleselector.h  selector.h
src/: fileimporter.cpp  main.cpp  mainwindow.cpp  pointcloudviewer.cpp  rectangleselector.cpp  selector.cpp
